Orbit integration in notebook now works, still needs to be checked for agreement with orbitmc. Also added orbitmc.par for reference.

--- a/propermotion.ipynb
+++ b/propermotion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +101,10 @@
     "    pm = [mu_a, mu_d] * u.mas/(100*u.yr) \n",
     "    \n",
     "    result = gc.pm_icrs_to_gal(c, pm).to(u.mas/(u.yr))*u.yr/u.mas\n",
-    "    mu_l = result[0]*100\n",
-    "    mu_b = result[1]*100\n",
-    "    return mu_l, mu_b\n",
+    "    mu_l = float(result[0]*100)\n",
+    "    mu_b = float(result[1]*100)\n",
+    "    \n",
+    "    return mu_l, mu_b #mas/cent\n",
     "\n",
     "def GETVT(mux,muy,d,asec_to_rad=asec_to_rad,year_to_sec=year_to_sec,pc_to_km=pc_to_km):\n",
     "    #mux, muy in mas/cent, distance in kpc\n",
@@ -142,7 +143,6 @@
     "    #upg(2) =  sqrt((ug(2)*cosalpha)**2 + (vg(2)*sinalpha)**2)\n",
     "    #vpg(2) =  sqrt((ug(2)*sinalpha)**2 + (vg(2)*cosalpha)**2)\n",
     "    #wpg(2) =  wg(2)\n",
-    "    \n",
     "    return vpi, vtheta, vz #km/s\n",
     "\n",
     "def get_v_xyz(l, b, d, vpi, vth, vz, dlsr=dlsr):\n",
@@ -156,10 +156,10 @@
     "    sinth=-y/np.sqrt(x**2+y**2)\n",
     "    vx=vpi*costh-vth*sinth\n",
     "    vy=-vpi*sinth-vth*costh\n",
-    "    \n",
     "    return vx, vy, vz\n",
     "\n",
     "def get_v_spherical(l, b, d, vpi, vtheta, vz, dlsr=dlsr):\n",
+    "    \n",
     "#                 --- The transformation equations: ---\n",
     "#       uppg =  upg*cos(beta) + wpg*sin(beta)\n",
     "#       vppg =  vpg\n",
@@ -182,6 +182,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -190,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +220,7 @@
       "Cylindrical velocities:\n",
       "vpi = -36.6806351847, vtheta = 117.081645903, vz = 40.498068962 (km/s)\n",
       "\n",
+      "<type 'numpy.float64'>\n",
       "Galactocentric XYZ velocities:\n",
       "Vx = 41.2271830735, Vy = -115.559076583, Vz = 40.498068962 (km/s)\n",
       "\n",
@@ -263,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +296,6 @@
     "print x0, y0, z0\n",
     "print vx0, vy0, vz0\n",
     "\n",
-    "\n",
     "#Initial angular momenta\n",
     "amx0=y0*vz0-z0*vy0\n",
     "amy0=z0*vx0-x0*vz0\n",
@@ -306,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +384,7 @@
      "output_type": "stream",
      "text": [
       "0.135335283237\n",
-      "0.135335283236613\n"
+      "0.135335283237\n"
      ]
     }
    ],
@@ -395,21 +404,21 @@
     "    #mpmath.gammainc defines them differently,\n",
     "    #so we make the switch when calling it herein\n",
     "    import mpmath\n",
-    "    mpmath.mp.dps = 15 # arbitrary precision!\n",
-    "    return mpmath.gammainc(z=a, a=x, regularized=True)\n",
+    "    #mpmath.mp.dps = 15 # arbitrary precision!\n",
+    "    return float(mpmath.gammainc(z=a, a=x, regularized=True))\n",
     "print gammq(1,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(mpf('-31.39233213980949'), mpf('-23.681444352731319'), mpf('-87.684957932643584'))\n"
+      "(-31.392332139809479, -23.681444352731305, -87.684957932643584)\n"
      ]
     }
    ],
@@ -467,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -494,28 +503,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'astropy.units.quantity.Quantity'>\n",
-      "79.1747666072084 52.2277262116938 216.804562580887\n"
+      "<type 'list'>\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "attribute of type 'int' is not callable",
+     "ename": "AttributeError",
+     "evalue": "'numpy.float64' object has no attribute 'append'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-248-b99ebc06474e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0mintegrate_orbit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-248-b99ebc06474e>\u001b[0m in \u001b[0;36mintegrate_orbit\u001b[0;34m(pot, x, y, z, vx, vy, vz, vcon, dt, NSTEP)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNSTEP\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpot\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'X'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0mfx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXFORCE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0mvx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mfx\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mvcon\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mvy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvy\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mfy\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mvcon\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-246-4b50464f8b4f>\u001b[0m in \u001b[0;36mXFORCE\u001b[0;34m(x, y, z, G)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m#bulge radial force: -GM_b(r)/r*r\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mmb_r\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1.\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1.0891\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mrc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mrc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m.2\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mgammq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mrc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0;31m#mb_r=mb*(1.00 - 1.0891*np.exp(-r/rc)*(r/rc)**.2 - gammq(.2,r/rc))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mfb_r\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mmb_r\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: attribute of type 'int' is not callable"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-75-f993e4a66fff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mxt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0mintegrate_orbit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-75-f993e4a66fff>\u001b[0m in \u001b[0;36mintegrate_orbit\u001b[0;34m(pot, x, y, z, vx, vy, vz, vcon, dt, NSTEP)\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0myt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0mzt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m         \u001b[0mr2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mxt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.float64' object has no attribute 'append'"
      ]
     }
    ],
@@ -532,7 +539,8 @@
     "    xt = [x]\n",
     "    yt = [y]\n",
     "    zt = [z]\n",
-    "#    if pot == 'X':\n",
+    "    print type(xt)\n",
+    "    #    if pot == 'X':\n",
     " #       fx, fy, fz = XFORCE(x,y,z)\n",
     "    for i in np.arange(NSTEP-1):\n",
     "        if pot == 'X':\n",
@@ -545,13 +553,12 @@
     "        z=z+dt*vz*vcon\n",
     "        r2=x*x+y*y+z*z\n",
     "        timestep = timestep + dt\n",
-    "        print type(r2)\n",
     "        time.append(timestep)\n",
-    "        #xt.append(x)\n",
-    "        #yt.append(y)\n",
-    "        #zt.append(z)\n",
-    "        #r2.append(r2)\n",
-    "        print x,y,z\n",
+    "        xt.append(x)\n",
+    "        yt.append(y)\n",
+    "        zt.append(z)\n",
+    "        r2.append(r2)\n",
+    "        print xt\n",
     "        \n",
     "integrate_orbit('X')"
    ]
@@ -890,7 +897,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def xyzvelocity(ra, dec, dist, mu_a, mu_d, rv):\n",
@@ -944,7 +953,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def radec_to_galactic_pos2(ra, dec, alpha_NGP=alpha_NGP, delta_NGP=delta_NGP, gc_GAN=gc_GAN):\n",
@@ -963,7 +974,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1061,6 +1074,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
