Orbit integration now works properly

--- a/propermotion.ipynb
+++ b/propermotion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -471,10 +471,123 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.23456390985e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.special import gammaln\n",
+    "\n",
+    "def gammq(a,x):\n",
+    "    #a-1 is power inside the integral\n",
+    "    #x = lower bound of integration\n",
+    "    #mpmath.gammainc defines them differently,\n",
+    "    #so we make the switch when calling it herein\n",
+    "    import mpmath\n",
+    "    #mpmath.mp.dps = 15 # arbitrary precision!\n",
+    "    return float(mpmath.gammainc(z=a, a=x, regularized=True))\n",
+    "\n",
+    "print gammq(50,109)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Construct sample of proper motions"
+    "## Shows that my gammq is equalt to FORTRAN version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0404276819945\n",
+      "0.0404276819945\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gser(A,X):\n",
+    "    ITMAX=100\n",
+    "    EPS=3.e-7\n",
+    "    GLN=gammaln(A)\n",
+    "    if X <= 0.: \n",
+    "        GAMSER = 0.\n",
+    "    AP=A\n",
+    "    SUM=1./A\n",
+    "    DEL=SUM\n",
+    "    for N in np.arange(1,ITMAX):\n",
+    "        AP=AP+1.\n",
+    "        DEL=DEL*X/AP\n",
+    "        SUM=SUM+DEL\n",
+    "        if (np.abs(DEL) < np.abs(SUM)*EPS): \n",
+    "            break\n",
+    "    GAMSER=SUM*np.exp(-X+A*np.log(X)-GLN)\n",
+    "    return GAMSER, GLN\n",
+    "\n",
+    "def GCF(a,x):\n",
+    "\n",
+    "    ITMAX=100\n",
+    "    EPS=3.e-7\n",
+    "    FPMIN=1.0e-30\n",
+    " \n",
+    "    GLN=gammaln(a)\n",
+    "\n",
+    "    #Set up for evaluating the continued fraction by modified Lentz's method with b_0=0.\n",
+    "    b=x+1.-a\n",
+    "    c=1./FPMIN\n",
+    "    d=1./b\n",
+    "    h=d\n",
+    "    for i in np.arange(1,ITMAX):\n",
+    "        an=-i*(i-a)\n",
+    "        b=b+2.\n",
+    "        d=an*d+b\n",
+    "        if np.abs(d) < FPMIN:\n",
+    "            d=FPMIN\n",
+    "        c=b+an/c\n",
+    "        if np.abs(c) < FPMIN:\n",
+    "            c=FPMIN\n",
+    "        d=1./d\n",
+    "        DEL=d*c\n",
+    "        h=h*DEL\n",
+    "        if np.abs(DEL-1.) < EPS:\n",
+    "            gammcf=np.exp(-x+a*np.log(x)-GLN)*h\n",
+    "    gammcf=np.exp(-x+a*np.log(x)-GLN)*h\n",
+    "    \n",
+    "    return gammcf, GLN\n",
+    "\n",
+    "def gammq2(a,x):\n",
+    "    if x < 0 or a <= 0:\n",
+    "         print 'bad arguments in gammq: a,x=',a,x\n",
+    "         quit()\n",
+    "    \n",
+    "    if x < a+1.:\n",
+    "    #Use the series representation\n",
+    "        gamser, gln = gser(a, x)\n",
+    "#c        --- and take its complement\n",
+    "        gammq=1.-gamser\n",
+    "    else:\n",
+    "#c        --- use the continued fraction representation\n",
+    "        gammcf, gln = GCF(a,x)\n",
+    "        gammq=gammcf\n",
+    "\n",
+    "    return gammq#, gln\n",
+    "\n",
+    "print gammq2(2,5)\n",
+    "print gammq(2, 5)"
    ]
   },
   {
@@ -486,22 +599,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77.1058750111 58.1663853521 214.843319663\n",
+      "41.2271830735 -115.559076583 40.498068962\n"
+     ]
+    }
+   ],
+   "source": [
+    "x0, y0, z0 = get_xyz(test_ra, test_dec, test_d)\n",
+    "print x0, y0, z0\n",
+    "vx0, vy0, vz0 = get_vxvyvz(test_ra, test_dec, test_d, mu_a, mu_d, rv)\n",
+    "print vx0, vy0, vz0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ACTUAL NSTEP = 500000 #Number of integration steps\n",
-    "NSTEP = 500\n",
+    "NSTEP = 400\n",
     "t = 100 #total integration time in Gyr\n",
-    "dt = float(t)/float(NSTEP) #timestep interval size in GYr\n",
     "\n",
     "def integrate_orbit(pot, x0, y0, z0, vx0, vy0, vz0, vcon=vcon, t=t, NSTEP=NSTEP):\n",
+    "    \n",
     "    dt = float(t)/float(NSTEP)\n",
-    "    timestep = 0.0\n",
-    "    times = [timestep]\n",
-    "    position = (x0, y0, z0, x0*x0+y0*y0+z0*z0)\n",
-    "    positions = [position]\n",
-    "\n",
+    "    \n",
     "    #Initial angular momenta\n",
     "    amx0=y0*vz0-z0*vy0\n",
     "    amy0=z0*vx0-x0*vz0\n",
@@ -511,33 +641,45 @@
     "    lam0=np.arctan2(-amy0,-amx0)\n",
     "    if(lam0 < 0.):\n",
     "        lam0 += 2.*np.pi\n",
+    "        \n",
+    "    #Initial energies\n",
+    "    initialenergies = energyfunctions['X'](x0, y0, z0, vx0, vy0, vz0)\n",
     "    \n",
-    "   # position = [(x+dt*vx*vcon, y+dt*vy*vcon, z+dt*vz*vcon)\n",
-    "    x = x0\n",
-    "    y = y0\n",
-    "    z = z0\n",
-    "    vx = vx0\n",
-    "    vy = vy0\n",
-    "    vz = vz0\n",
-    "    #fx, fy, fz = forcefunctions['X'](x0,y0,z0)\n",
-    "    for i in np.arange(0, NSTEP):\n",
-    "        fx, fy, fz = forcefunctions['X'](x, y, z)\n",
+    "    dt = float(t)/float(NSTEP)\n",
+    "    x=x0\n",
+    "    y=y0\n",
+    "    z=z0\n",
+    "    r2=x**2+y**2+z**2\n",
+    "    vx=vx0\n",
+    "    vy=vy0\n",
+    "    vz=vz0\n",
+    "    \n",
+    "    times, positions = [[] for i in np.arange(2)] \n",
+    "    timestep = 0\n",
+    "    times.append(timestep)\n",
+    "    positions.append((x,y,z,r2))\n",
+    "\n",
+    "    fx, fy, fz = forcefunctions['X'](x, y, z)\n",
+    "    for i in np.arange(0, NSTEP): #-1)?\n",
+    "        timestep = timestep + dt\n",
     "        vx=vx+0.5*dt*fx/vcon\n",
     "        vy=vy+0.5*dt*fy/vcon\n",
     "        vz=vz+0.5*dt*fz/vcon\n",
     "        x=x+dt*vx*vcon\n",
     "        y=y+dt*vy*vcon\n",
     "        z=z+dt*vz*vcon\n",
-    "        r2 = x*x+y*y+z*z\n",
-    "        timestep = timestep + dt\n",
+    "        r2 = x**2 + y**2 + z**2\n",
+    "        \n",
+    "        fx, fy, fz = forcefunctions['X'](x, y, z)\n",
+    "        vx=vx+0.5*dt*fx/vcon\n",
+    "        vy=vy+0.5*dt*fy/vcon\n",
+    "        vz=vz+0.5*dt*fz/vcon\n",
+    "        \n",
     "        times.append(timestep)\n",
     "        positions.append((x,y,z,r2))\n",
     "        sys.stdout.flush()\n",
-    "        sys.stdout.write('\\r' + 'Done {0}' .format(i))      \n",
-    "    print\n",
-    "\n",
-    "    #Final energies\n",
-    "    finalenergies = energyfunctions['X'](x, y, z, vx, vy, vz)\n",
+    "        sys.stdout.write('\\r' + 'Done {0}' .format(i))\n",
+    "    print   \n",
     "    \n",
     "    #Final angular momenta\n",
     "    amx=y*vz-z*vy\n",
@@ -557,8 +699,11 @@
     "             lamf += 2.*np.pi\n",
     "    dlam=lamf-lam0\n",
     "        \n",
-    "    #return positions, finalenergies, peri, apo\n",
-    "    return {'positions':np.array(positions), \n",
+    "    #Final energies\n",
+    "    finalenergies = energyfunctions['X'](x, y, z, vx, vy, vz)\n",
+    "        \n",
+    "    return {'positions':np.array(positions),\n",
+    "            'initialenergies':np.array(initialenergies),\n",
     "            'finalenergies':np.array(finalenergies), \n",
     "            'times':np.array(times), \n",
     "            'lam0':np.rad2deg(lam0),\n",
@@ -569,10 +714,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done 399"
+     ]
+    }
+   ],
+   "source": [
+    "positions = integrate_orbit('X', x0, y0, z0, vx0, vy0, vz0)['positions']\n",
+    "r2 = [pos[3] for pos in positions]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -583,37 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done 399\n"
-     ]
-    }
-   ],
-   "source": [
-    "result_test_idorb = integrate_orbit('X', vx=vx0, vy=vy0, vz=vz0)\n",
-    "test_r2=[position[3] for position in result_test_idorb['positions']]\n",
-    "times = result_test_idorb['times']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_x = [position[0] for position in result_test_idorb['positions']]\n",
-    "test_y = [position[1] for position in result_test_idorb['positions']]\n",
-    "test_z = [position[2] for position in result_test_idorb['positions']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,8 +755,6 @@
     "    peri_mean = np.sqrt(np.mean(peris))\n",
     "\n",
     "    return id_pe, id_ap, peri_mean, apo_mean\n",
-    "\n",
-    "id_pe, id_ap, peri_mean, apo_mean = find_apo_peri(test_r2)\n",
     "\n",
     "def find_ecc(r2, id_pe, id_ap):\n",
     "    N_pe = len(id_pe)\n",
@@ -726,27 +850,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(192.27907403048422, -22.123000968319303)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(192.27775500506823, -22.131565669277787)"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "    #do some checking to avoid splitting omega values across 0/2pi\n",
     "    #and the same for lam\n",
@@ -761,24 +867,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'id_pe' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-e6bc48dbf3b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mrt1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrt2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mrt1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrt2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_rt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_r2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mid_pe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mid_ap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0mrt1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrad2deg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mrt2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrad2deg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrt2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'id_pe' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#NOT YET WORKING\n",
-    "\n",
     "ldsph = 1.e3\n",
     "mol1 = 1.\n",
     "mol2 = 3.\n",
@@ -805,12 +900,7 @@
     "    rt1=np.arctan(rt1/dg)*ratoam\n",
     "    rt2=np.arctan(rt2/dg)*ratoam\n",
     "    \n",
-    "    return rt1, rt2\n",
-    "    \n",
-    "rt1, rt2 = get_rt(test_r2, id_pe, id_ap)\n",
-    "rt1 = np.rad2deg(rt1)\n",
-    "rt2 = np.rad2deg(rt2)\n",
-    "print rt1, rt2"
+    "    return rt1, rt2"
    ]
   },
   {
@@ -822,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -831,25 +921,26 @@
      "text": [
       "Constructing sample of 1 proper motions from Gaussian distributions of mu_a, mu_d, radial velocity...\n",
       "Converting to sample of xyz velocities...\n",
-      "Done 499\n",
-      "229.673888411 459.021817299\n",
-      "0.333017809466\n",
-      "18.55\n",
-      "67.8684343307 102.277755005\n",
-      "192.277755005 -22.1315656693\n",
-      "191.913012306 -22.1488456026\n",
-      "1.75532590909 2.53161687342\n",
-      "dlam = 0.622682101852\n",
+      "Done 999\n",
+      "peri, apo = 161.741629619 245.371790494\n",
+      "ecc = 0.20543572056\n",
+      "period = 6.6\n",
+      "inclination, longitude = 67.8947526765 103.649081909\n",
+      "lpole, bpole = 193.649081909 -22.1052473235\n",
+      "lam0, bam0 = 191.913012306 -22.1488456026\n",
+      "rt1, 2 = 1.45611893282 2.10008600046\n",
+      "dlam, dbam = 3.37325595473 -0.00670669175832\n",
       "\n",
-      "229.673888411 459.021817299\n",
-      "0.333017809466\n",
-      "18.55\n"
+      "161.741629619 245.371790494\n",
+      "0.20543572056\n",
+      "6.6\n"
      ]
     }
    ],
    "source": [
     "NMC = 1 #Number of MC experiments. Set back to 1000 later\n",
-    "\n",
+    "t = 100\n",
+    "NSTEP = 1000\n",
     "#Get XYZ from RA, DEC\n",
     "x0, y0, z0 = get_xyz(test_ra, test_dec, test_d)\n",
     "\n",
@@ -871,7 +962,7 @@
     "\n",
     "for velocityvector in velsample:\n",
     "    vx0, vy0, vz0 = velocityvector\n",
-    "    result = integrate_orbit('X', x0, y0, z0, vx0, vy0, vz0, t=100, NSTEP=500)\n",
+    "    result = integrate_orbit('X', x0, y0, z0, vx0, vy0, vz0, t=t, NSTEP=NSTEP)\n",
     "    positions = result['positions']\n",
     "    times = result['times']\n",
     "    x = [pos[0] for pos in positions]\n",
@@ -883,18 +974,18 @@
     "    id_pe, id_ap, peri_mean, apo_mean = find_apo_peri(r2)\n",
     "    N_pe = len(id_pe)\n",
     "    N_ap = len(id_ap)\n",
-    "    print peri_mean, apo_mean\n",
+    "    print \"peri, apo =\", peri_mean, apo_mean\n",
     "    apos.append(apo_mean)\n",
     "    peris.append(peri_mean)\n",
     "    \n",
     "    #Get eccentr\n",
     "    ecc = find_ecc(r2, id_pe, id_ap)\n",
-    "    print ecc\n",
+    "    print \"ecc =\", ecc\n",
     "    es.append(ecc)\n",
     "    \n",
     "    #Get period\n",
     "    avg_period = find_period(times, id_ap)\n",
-    "    print avg_period\n",
+    "    print \"period =\", avg_period\n",
     "    periods.append(avg_period)\n",
     "    \n",
     "    #Get Inclination and Longitude\n",
@@ -905,7 +996,7 @@
     "    avg_omega = np.mean(longitudes)\n",
     "    thetas.append(np.rad2deg(avg_theta))\n",
     "    omegas.append(np.rad2deg(avg_omega))\n",
-    "    print np.rad2deg(avg_theta), np.rad2deg(avg_omega)\n",
+    "    print \"inclination, longitude =\", np.rad2deg(avg_theta), np.rad2deg(avg_omega)\n",
     "    \n",
     "    #SAEM THING AS ABOVE\n",
     "    #for i in np.arange(1,min(N_pe,N_ap)):\n",
@@ -919,22 +1010,23 @@
     "    lpole, bpole = find_lpole_bpole(avg_theta, avg_omega)\n",
     "    lpoles.append(lpole)\n",
     "    bpoles.append(bpole)\n",
-    "    print lpole, bpole\n",
+    "    print \"lpole, bpole =\", lpole, bpole\n",
     "    \n",
     "    #Get initial angular momentum\n",
     "    lam0 = result['lam0']\n",
     "    bam0 = result['bam0']\n",
     "    lam0s.append(lam0)\n",
     "    bam0s.append(bam0)\n",
-    "    print lam0, bam0\n",
+    "    print \"lam0, bam0 =\", lam0, bam0\n",
     "    \n",
     "    #Get rt1, rt2\n",
     "    rt1, rt2 = get_rt(r2, id_pe, id_ap) \n",
-    "    print rt1, rt2\n",
+    "    print \"rt1, 2 =\", rt1, rt2\n",
     "    \n",
-    "    #dlam\n",
+    "    #dlam, dbam\n",
     "    dlam = result['dlam']\n",
-    "    print \"dlam =\", dlam\n",
+    "    dbam = result['dbam']\n",
+    "    print \"dlam, dbam =\", dlam, dbam\n",
     "    \n",
     "print \n",
     "print np.nanmean(peris), np.nanmean(apos)\n",
@@ -957,22 +1049,6 @@
    "source": [
     "## Deprecated"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Get Galactocentric tangential velocity components"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
